--- a/_organizers/ma_yi_gc_544078.md
+++ b/_organizers/ma_yi_gc_544078.md
@@ -1,6 +1,6 @@
 ---
 name: Yi Ma
-affiliation: UC Berkeley<br>HKU IDS
+affiliation: HKU IDS<br>UC Berkeley
 website: https://people.eecs.berkeley.edu/~yima/
 photo: ma.jpeg
 ---
